add routes for creating catalogs
