# bartop-api/src/api/catalog/catalog.resolvers.js
@@ -1,0 +1,12 @@
+const db = require('../../db/store');
+const logic = require('./catalog.logic')(db);
+
+const createCatalog = async (root, { newCatalog }) => {
+  return await logic.create(newCatalog);
+};
+
+module.exports = {
+  Mutation: {
+    createCatalog
+  }
+};
