# docs/api/openapi.yaml
@@ -92,6 +92,36 @@ paths:
         '500':
           $ref: '#/components/responses/GeneralError'
 
+  /catalogs:
+    post:
+      summary: Create a new catalog for a user.
+      description: Creates a new catalog for a user, consisting of entirely the passed-in drink IDs.
+      operationId: createCatalog
+      requestBody:
+        required: true
+        description: JSON object containing the new Catalog to be created.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Catalog'
+      responses:
+        '201':
+          description: New Catalog successfully created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NonExistant'
+        '406':
+          $ref: '#/components/responses/InvalidContentType'
+        '422':
+          $ref: '#/components/responses/InvalidBodyModel'
+        '500':
+          $ref: '#/components/responses/GeneralError'
+
 components:
 
   securitySchemes:
@@ -109,7 +139,7 @@ components:
       description: Access token is missing or invalid.
 
     NonExistant:
-      description: Route does not exist.
+      description: Resource does not exist.
 
     InvalidContentType:
       description: Invalid content type.
@@ -127,6 +157,8 @@ components:
         authoId:
           type: string
           description: The user ID generated by Auth0, used to distinguish users at login. It is required for posting new users to the database.
+        catalog:
+          $ref: '#/components/schemas/DrinksArray'
         id:
           $ref: '#/components/schemas/ID'
 
@@ -177,17 +209,19 @@ components:
       type: object
       required:
         - userId
+        - drinkIds
       properties:
         userId:
           type: string
           description: Unique identifier for the user that the catalog belongs to.
         drinkIds:
-          type: array
-          description: List of identifiers for the drinks in the catalog.
-          items:
-            type: string
-        id:
-          $ref: '#/components/schemas/ID'
+          $ref: '#/components/DrinksArray'
+
+    DrinksArray:
+      type: array
+      description: List of drink identifiers.
+      items:
+        type: string
 
     ID:
       type: string
